# LightTranslator

./: .env.example  .gitignore  App.tsx  README.md  constants.ts  index.css  index.html  metadata.json  package-lock.json  package.json  release_notes_v1.0.4.md  release_notes_v1.1.0.md  tailwind.config.js  tsconfig.json  types.ts  vite.config.ts
assets/: lighttranslator.desktop
components/: ErrorBoundary.tsx  OcrModal.tsx  QuickTranslateWindow.tsx  SettingsModal.tsx  TitleBar.tsx  TranslatorView.tsx
electron/: dependencyChecker.js  main.js  preload.cjs
hooks/: useOcrDependencies.ts
scripts/: check-secrets.js
services/: geminiService.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/lib/: platform.ts
store/: useAppStore.ts
utils/: textUtils.ts
